이미지 추가

--- a/_posts/2023-01-23-first.md
+++ b/_posts/2023-01-23-first.md
@@ -4,3 +4,9 @@ title: "시~작"
 ---
 
 # 2023년 1월 23일 (월) 깃허브 블로그 시작~!
+
+이미지 테스트
+
+![x6kpyo](../images/2023-01-23-first/x6kpyo.jpg)
+
+왜 나쁜 사람들만 이득을 보는 걸까요?
