--- a/_posts/2023-01-23-first.md
+++ b/_posts/2023-01-23-first.md
@@ -1,6 +1,7 @@
 ---
 layout: single
 title: "시~작"
+typora-root-url: ../
 ---
 
 # 2023년 1월 23일 (월) 깃허브 블로그 시작~!
@@ -10,3 +11,4 @@ title: "시~작"
 ![x6kpyo](../images/2023-01-23-first/x6kpyo.jpg)
 
 왜 나쁜 사람들만 이득을 보는 걸까요?
+
